--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div>Primo episodio</div>
             </div>
             <div class="episodio" onclick="_open('secondo')">
-                <div>In arrivo...</div>
+                <div>Secondo episodio</div>
             </div>
             <div class="episodio">
                 <div>In arrivo...</div>
