before 3rd weeks fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Podcast</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <link rel="icon" href="favicon.png">
     <script src="main.js"></script>
 </head>
@@ -37,15 +38,33 @@
             <h1 id="title" class="">Episodio 1</h1>
             <div class="a">
                 <h1 id="description">Lorem ipsum dolor sit, amet consectetur.</h1>
-                <audio id="mp3" controls src="">
-                </audio>
+                <div style="margin-bottom: 50px;">
+                    <audio id="mp3" controls src="">
+                    </audio>
+                </div>
+                <a id="pdf" href="22.pdf" target="_blank">
+                    <div class="episodio">
+                        <div style="margin-right: 10px;">Commento del Don</div>
+                        <ion-icon name="document-outline"></ion-icon>
+                    </div>
+                </a>
+                <a id="pdf" href="mailto:clanvimercateprimo@gmail.com" target="_blank">
+                    <div class="episodio">
+                        <div style="margin-right: 10px;">Scrivici!</div>
+                        <ion-icon name="mail-outline"></ion-icon>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="b">
             <h2>Salmo:</h2>
-            <p id="salmo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat est suscipit ab ipsum eos deleniti porro aperiam minima praesentium sapiente quo architecto consequatur voluptas exercitationem nemo, culpa possimus dignissimos quae.</p>
+            <p id="salmo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat est suscipit ab ipsum eos
+                deleniti porro aperiam minima praesentium sapiente quo architecto consequatur voluptas exercitationem
+                nemo, culpa possimus dignissimos quae.</p>
             <h2>Commento:</h2>
-            <p id="commento">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat harum neque, illo molestiae cupiditate nulla officiis sunt alias, incidunt impedit dolores quia sequi facere magni. Dolorum temporibus doloribus iure aliquam.</p>
+            <p id="commento">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat harum neque, illo
+                molestiae cupiditate nulla officiis sunt alias, incidunt impedit dolores quia sequi facere magni.
+                Dolorum temporibus doloribus iure aliquam.</p>
         </div>
     </div>
     </div>
