--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="episodio" onclick="_open('secondo')">
                 <div>Secondo episodio</div>
             </div>
+            <div class="episodio" onclick="_open('terzo')">
+                <div>Terzo episodio</div>
+            </div>
             <div class="episodio">
                 <div>In arrivo...</div>
             </div>
