--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="episodio" onclick="_open('terzo')">
                 <div>Terzo episodio</div>
             </div>
+            <div class="episodio" onclick="_open('quarto')"">
+                <div>Quarto episodio</div>
+            </div>
             <div class="episodio">
                 <div>In arrivo...</div>
             </div>
