--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div class="episodio" onclick="_open('terzo')">
                 <div>Terzo episodio</div>
             </div>
-            <div class="episodio" onclick="_open('quarto')"">
+            <div class="episodio" onclick="_open('quarto')">
                 <div>Quarto episodio</div>
             </div>
-            <div class="episodio">
-                <div>In arrivo...</div>
+            <div class="episodio" onclick="_open('quinto')">
+                <div>Quinto episodio</div>
             </div>
         </div>
         <div>
